# lisp-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
examples/: blink-led.scm  calc.scm  fizzbuzz.lisp  fizzbuzz.scm  mandelbrot.scm  test.lisp
rv32-asm/: Cargo.toml  LICENSE  README.md
rv32-asm/src/: assembler.rs  error.rs  instruction.rs  lib.rs
scripts/: compile_and_run.sh
src/: lib.rs  lispi.rs  main.rs
src/data_structure/: graph.rs
src/lispi/: ast.rs  cli_option.rs  common.rs  console.rs  environment.rs  error.rs  evaluator.rs  include_expander.rs  ir.rs  macro_expander.rs  opt.rs  parser.rs  pass.rs  riscv.rs  tokenizer.rs  typer.rs  unique_generator.rs
src/lispi/ir/: basic_block.rs  compiler.rs  instruction.rs  register_allocation.rs  removing_phi_instructions.rs  tag.rs
src/lispi/opt/: constant_folding.rs  immediate_unfolding.rs  removing_duplicated_assignments.rs  removing_redundant_assignments.rs  removing_uncalled_functions.rs  tail_recursion.rs
src/lispi/pass/: constant_folding.rs  context_folding.rs  immediate_unfolding.rs  placing_on_memory.rs  removing_duplicated_assignments.rs  removing_redundant_assignments.rs  removing_ref_and_deref.rs  removing_uncalled_functions.rs  tail_recursion.rs
src/lispi/riscv/: cmp_translator.rs  code_generator.rs  instruction.rs  stack_frame.rs
tests/: compiler_test.rs  interpret_test.rs  type_test.rs
tests/common/: mod.rs
