[package]
name = "lisp-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
rv32emu-test = []

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "3.2", features = ["derive"] }
crossterm = "0.23"
object = { version = "0.30", features = ["write"] }
id-arena = "2.2"
colored = "2"
itertools = "0.10.5" 

[dev-dependencies]
serde_json = "1.0"