[package]
name = "rv32-asm"
version = "0.1.0"
edition = "2021"
authors = ["long-long-float <niinikazuki@yahoo.co.jp>"]
description = "RISC-V(RV32IM) instructions and assembler for Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rustc-hash = "1.1"
colored = "2.0"